Added basic onboarding add site and ApCode verify functionality
