# models/siteModel.js
@@ -24,6 +24,7 @@ var model = require('../helpers/model'),
 			'genieeMediaId',
 			'dateCreated',
 			'dateModified',
+			'onboardingStage',
 			'step',
 			'websiteRevenue',
 			'adsensePublisherId',
@@ -417,6 +418,16 @@ function apiModule() {
 				})
 				.catch(function(err) {
 					throw new AdPushupError('Cannot get setup step');
+				});
+		},
+		getSetupStage: function (siteId) {
+			return API.getSiteById(siteId)
+				.then(function (site) {
+					var onboardingStage = site.get('onboardingStage');
+					return onboardingStage;
+				})
+				.catch(function (err) {
+					throw new AdPushupError('Cannot get setup onboarding stage');
 				});
 		},
 		getCmsData: function(siteId) {
